--- a/HTML/homeAmministratore.html
+++ b/HTML/homeAmministratore.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="it" lang="it">
     <head>
-        <title>Home &vert; Area Amministratore</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta http-equiv="Content-Script-Type" content="type" />
 		<meta name="title" content="homepage area personale amministratore" />
 		<meta name="description" content="homepage dell'area amministratore del sito" />
 		<meta name="keywords" content="home, area personale, area amministratore" />
 		<meta name="language" content="italian it" />
-		<meta name="author" content="Giulia Fiorese" />
+        <meta name="author" content="Giulia Fiorese" />
+        
+        <title>Home Area Amministratore</title>
+
         <link rel="icon" type="images/svg" href="../Images/LogoGREG.png" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssAmministratore.css" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
-		<script type="text/javascript" src=""></script>
     </head>
 
     <body>
@@ -21,11 +23,11 @@
         <div class="corpoAmministratore">
             <menuAmministratore></menuAmministratore>
             <div class="testoAmministratore">
-                <h1 class="h1Amm">Benvenuto<nome></nome>&excl;</h1>
-                <p class="pAmm">Questa &egrave; l&apos;area dedicata ai dipendenti&comma; per la gestione dei veicoli e dei messaggi&period; Comincia subito&excl;</p>
-                <p class="pLinkHomeAmm"><a class="linkMod" href="../PAGES/messaggiAmministratore.php" tabindex="13">LISTA MESSAGGI</a></p>
-                <p class="pLinkHomeAmm"><a class="linkMod" href="../PAGES/nuovoVeicoloNoleggio.php" tabindex="14">AGGIUNGI VEICOLO DA NOLEGGIARE</a></p>
-                <p class="pLinkHomeAmm"><a class="linkMod" href="../PAGES/nuovoVeicoloVendita.php" tabindex="15">AGGIUNGI VEICOLO DA VENDERE</a></p>
+                <h1 class="h1Amm">Benvenuto<nome></nome></h1>
+                <p class="pAmm">Questa &egrave; l&apos;area dedicata ai dipendenti, per la gestione dei veicoli e dei messaggi</p>
+                
+                <p class="pLinkHomeAmm"><a class="linkMod" href="../PAGES/nuovoVeicoloNoleggio.php" tabindex="14">AGGIUNGI VEICOLO A NOLEGGIO</a></p>
+                <p class="pLinkHomeAmm"><a class="linkMod" href="../PAGES/nuovoVeicoloVendita.php" tabindex="15">AGGIUNGI VEICOLO IN VENDITA</a></p>
             </div>
         </div>
         <footer></footer>
