--- a/HTML/listaNoleggiAmministratore.html
+++ b/HTML/listaNoleggiAmministratore.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="it" lang="it">
     <head>
-        <title>Prenotazioni Veicoli A Noleggio &vert; Area Amministratore</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="title" content="riepilogo veicoli prenotati per noleggio" />
 		<meta name="description" content="riepilogo di tutti veicoli prenotati per il noleggio" />
 		<meta name="keywords" content="noleggio, veicoli noleggiati, riepilogo, area personale, area amministratore" />
 		<meta name="language" content="italian it" />
-		<meta name="author" content="Giulia Fiorese" />
+        <meta name="author" content="Giulia Fiorese" />
+        
+        <title>Prenotazioni Veicoli A Noleggio Amministratore</title>
+
         <link rel="icon" type="images/svg" href="../Images/LogoGREG.png" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssAmministratore.css" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
-		<script type="text/javascript" src=""></script>
+        
+        <script type="text/javascript" src=""></script>
     </head>
 
     <body>
