--- a/HTML/noleggioVeicolo.html
+++ b/HTML/noleggioVeicolo.html
@@ -3,6 +3,7 @@
 
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta http-equiv="Content-Script-Type" content="text/javascript" />
 		<title>Riepilogo noleggio veicolo</title>
 		<meta name="title" content="Riepilogo auto per il noleggio o l'acquisto" />
 		<meta name="description" content="pagina riguardante il riepilogo dell'auto noleggiata" />
