--- a/HTML/paginaVuota.html
+++ b/HTML/paginaVuota.html
@@ -3,6 +3,7 @@
 
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta http-equiv="Content-Script-Type" content="text/javascript" />
         <title>Pagina messaggio</title>
         <meta name="title" content="login" />
         <meta name="language" content="italian it" />
