fix per validazione

--- a/HTML/homeAmministratore.html
+++ b/HTML/homeAmministratore.html
@@ -2,7 +2,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="it" lang="it">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <meta http-equiv="Content-Script-Type" content="type" />
 		<meta name="title" content="homepage area personale amministratore" />
 		<meta name="description" content="homepage dell'area amministratore del sito" />
 		<meta name="keywords" content="home, area personale, area amministratore" />
@@ -25,7 +24,7 @@
             <div class="testoAmministratore">
                 <h1 class="h1Amm">Benvenuto<nome></nome></h1>
                 <p class="pAmm">Questa &egrave; l&apos;area dedicata ai dipendenti, per la gestione dei veicoli e dei messaggi</p>
-                
+                <p class="pLinkHomeAmm"><a class="linkMod" href="../PAGES/messaggiAmministratore.php" tabindex="13">LISTA MESSAGGI</a></p>
                 <p class="pLinkHomeAmm"><a class="linkMod" href="../PAGES/nuovoVeicoloNoleggio.php" tabindex="14">AGGIUNGI VEICOLO A NOLEGGIO</a></p>
                 <p class="pLinkHomeAmm"><a class="linkMod" href="../PAGES/nuovoVeicoloVendita.php" tabindex="15">AGGIUNGI VEICOLO IN VENDITA</a></p>
             </div>
