--- a/HTML/modificaInfoAmministratore.html
+++ b/HTML/modificaInfoAmministratore.html
@@ -26,7 +26,7 @@
             <div class="testoAmministratore">
                 <messaggio></messaggio>
                 <p class="pAmm">Inserire qui le informazioni personali da modificare</p>
-                <p class="pAmm"><strong>Attenzione</strong>&colon; l&apos;indirizzo <span xml:lang="en" lang="en">email</span> con cui ci si &egrave; registrati non pu&ograve; essere modificato</p>
+                <p class="pAmm">Attenzione&colon; l&apos;indirizzo <span xml:lang="en" lang="en">email</span> con cui ci si &egrave; registrati non pu&ograve; essere modificato</p>
                 <form id="modificaInfo" onsubmit="return checkForm('modificaInfo');" class="formAmm" action="../PHP/salvaInformazioniModificate.php" method="post" enctype="multipart/form-data">
                     <fieldset>
                         <legend>Informazioni Personali</legend>
