--- a/HTML/modificaVeicoloNoleggio.html
+++ b/HTML/modificaVeicoloNoleggio.html
@@ -13,8 +13,8 @@
         <link rel="icon" type="images/svg" href="../Images/LogoGREG.png" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssAmministratore.css" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
-		<script type="text/javascript" src=""></script>
-    <script type="text/javascript" src="../JS/controlliClient.js"></script>
+
+        <script type="text/javascript" src="../JS/controlliClient.js"></script>
     </head>
 
     <body>
@@ -25,8 +25,8 @@
             <menuAmministratore></menuAmministratore>
             <div class="testoAmministratore">
                 <messaggio></messaggio>
-                <p class="pAmm">Inserisci qui le informazioni sul veicolo a noleggio da modificare&period;</p>
-                <p class="pAmm"><strong>Attenzione</strong>&colon; la targa del veicolo non pu&ograve; essere modificata&period;</p>
+                <p class="pAmm">Inserisci qui le informazioni sul veicolo a noleggio da modificare</p>
+                <p class="pAmm">Attenzione&colon; la targa del veicolo non pu&ograve; essere modificata</p>
                 <form id="modificaVeicoloNoleggio" onsubmit="return checkForm('modificaVeicoloNoleggio');" class="formAmm" action="../PHP/salvaVeicoloNoleggioModificato.php" method="post" enctype="multipart/form-data">
                     <fieldset>
                         <legend>Informazioni Veicolo</legend>
