--- a/HTML/rispostaMessaggioAmministratore.html
+++ b/HTML/rispostaMessaggioAmministratore.html
@@ -13,8 +13,8 @@
         <link rel="icon" type="images/svg" href="../Images/LogoGREG.png" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssAmministratore.css" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
-		<script type="text/javascript" src=""></script>
-    <script type="text/javascript" src="../JS/controlliClient.js"></script>
+        
+        <script type="text/javascript" src="../JS/controlliClient.js"></script>
     </head>
 
     <body>
@@ -25,7 +25,7 @@
             <menuAmministratore></menuAmministratore>
             <div class="testoAmministratore">
                 <messaggio></messaggio>
-                <p class="pAmm">Scrivi qui il messaggio di risposta da inviare&period;</p>
+                <p class="pAmm">Scrivi qui il messaggio di risposta da inviare</p>
                 <form id="rispostaMessaggioAmministartore" onsubmit="return checkForm('rispostaMessaggioAmministartore');" class="formAmm" action="../PHP/salvaRispostaAmministratore.php" method="post" enctype="multipart/form-data">
                     <fieldset>
                         <legend>Messaggio</legend>
