--- a/HTML/modificaVeicoloVendita.html
+++ b/HTML/modificaVeicoloVendita.html
@@ -13,8 +13,8 @@
         <link rel="icon" type="images/svg" href="../Images/LogoGREG.png" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssAmministratore.css" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
-		<script type="text/javascript" src=""></script>
-    <script type="text/javascript" src="../JS/controlliClient.js"></script>
+        
+        <script type="text/javascript" src="../JS/controlliClient.js"></script>
     </head>
 
     <body>
@@ -25,11 +25,11 @@
             <menuAmministratore></menuAmministratore>
             <div class="testoAmministratore">
                 <messaggio></messaggio>
-                <p class="pAmm">Inserisci qui le informazioni sul veicolo in vendita da modificare&period;</p>
+                <p class="pAmm">Inserisci qui le informazioni sul veicolo in vendita da modificare</p>
                 <form id="modificaVeicoloVendita" onsubmit="return checkForm('modificaVeicoloVendita');" class="formAmm" action="../PHP/salvaVeicoloVenditaModificato.php" method="post" enctype="multipart/form-data">
                     <fieldset>
                         <legend>Informazioni Veicolo</legend>
-                        <p class="pFormAmm">Ogni campo deve essere compilato&colon; nel caso in cui il campo venga lasciato vuoto&comma; le informazioni precedentemente inserite verranno eliminate</p>
+                        <p class="pFormAmm">Ogni campo deve essere compilato&colon; nel caso in cui il campo venga lasciato vuoto, le informazioni precedentemente inserite verranno eliminate</p>
 
                         <label for="marca">Marca</label>
                         <input type="text" name="marca" id="marca" tabindex="13" />
