--- a/HTML/veicoliNoleggioAmministratore.html
+++ b/HTML/veicoliNoleggioAmministratore.html
@@ -13,8 +13,6 @@
         <link rel="icon" type="images/svg" href="../Images/LogoGREG.png" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssAmministratore.css" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
-        
-        <script type="text/javascript" src=""></script>
     </head>
 
     <body>
@@ -26,7 +24,7 @@
             <div class="testoAmministratore">
                 <messaggio></messaggio>
                 <h1 class="h1Amm">Lista dei veicoli a noleggio</h1>
-                <p class="pLinkAmm"><a class="linkMod" href="nuovoVeicoloNoleggio.php" tabindex="13">AGGIUNGI VEICOLO DA NOLEGGIARE</a></p>
+                <p class="pLinkAmm"><a class="linkMod" href="nuovoVeicoloNoleggio.php" tabindex="13">AGGIUNGI VEICOLO A NOLEGGIO</a></p>
                 <veicoliNoleggio></veicoliNoleggio>
             </div>
         </div>
