aggionti controlliJS in tutti i form

--- a/HTML/login.html
+++ b/HTML/login.html
@@ -3,6 +3,7 @@
 
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta http-equiv="Content-Script-Type" content="text/javascript" />
 		<title>Login</title>
 		<meta name="title" content="Login" />
     <meta name="description" content="Pagina di accesso" />
@@ -14,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssUtente.css" />
 		<script type="text/javascript" src="../JS/controlliClient.js"></script>
+		<script type="text/javascript" src="../JS/generale.js"></script>
 	</head>
 
 	<body>
