--- a/HTML/rispostaMessaggioAmministratore.html
+++ b/HTML/rispostaMessaggioAmministratore.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="../CSS/cssAmministratore.css" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 		<script type="text/javascript" src=""></script>
+    <script type="text/javascript" src="../JS/controlliClient.js"></script>
     </head>
 
     <body>
@@ -23,7 +24,7 @@
             <div class="testoAmministratore">
                 <messaggio></messaggio>
                 <p class="pAmm">Scrivi qui il messaggio di risposta da inviare&period;</p>
-                <form id="rispostaMessaggioAmministartore" class="formAmm" action="../PHP/salvaRispostaAmministratore.php" method="post" enctype="multipart/form-data">
+                <form id="rispostaMessaggioAmministartore" onsubmit="return checkForm('rispostaMessaggioAmministartore');" class="formAmm" action="../PHP/salvaRispostaAmministratore.php" method="post" enctype="multipart/form-data">
                     <fieldset>
                         <legend>Messaggio</legend>
                         <p class="pFormAmm">Tutti i campi marcati con l&apos;asterisco &ast; sono obbligatori&period;</p>
