--- a/HTML/areaPrivata.html
+++ b/HTML/areaPrivata.html
@@ -3,6 +3,7 @@
 
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta http-equiv="Content-Script-Type" content="text/javascript" />
 		<title>Area Privata</title>
 		<meta name="title" content="Area privata utente" />
     <meta name="description" content="Area personale dell'utente" />
@@ -13,7 +14,7 @@
 		<link rel="icon" type="images/svg" href="" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
     <link rel="stylesheet" type="text/css" href="../CSS/cssUtente.css" />
-    <script type="text/javascript" src=""></script>
+    <script type="text/javascript" src="../JS/generale.js"></script>
 	</head>
 
 	<body>
