aggiunto scrollUp in areaPrivata

--- a/HTML/areaPrivata.html
+++ b/HTML/areaPrivata.html
@@ -23,12 +23,13 @@
 		<breadcrumb></breadcrumb>
 
 		<div class="main">
-		<h1 class='titolo'>AREA PERSONALE</h1>
-		<sideNav></sideNav>
-		<contentItems></contentItems>
-
-    </div>
-
+			<h1 class='titolo'>AREA PERSONALE</h1>
+			<sideNav></sideNav>
+			<contentItems></contentItems>
+		</div>
+		<p>
+				<button onclick="topFunction()" class="hide" id="scrollUp">&#x2b06;</button>
+		</p>
     <footer></footer>
   </body>
 </html>
