--- a/HTML/registrati.html
+++ b/HTML/registrati.html
@@ -14,6 +14,7 @@
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssUtente.css" />
   	<script type="text/javascript" src="../JS/controlliClient.js"></script>
+		<script type="text/javascript" src="../JS/generale.js"></script>
 	</head>
 
 	<body>
@@ -58,7 +59,9 @@
 				</form>
 			</div>
 		</div>
-
+		<p>
+				<button onclick="topFunction()" class="hide" id="scrollUp">&#x2b06;</button>
+		</p>
     <footer></footer>
   </body>
 </html>
