--- a/HTML/nuovoVeicoloVendita.html
+++ b/HTML/nuovoVeicoloVendita.html
@@ -49,7 +49,7 @@
                         <label for="immagineAuto">Immagine &ast;</label>
                         <input type="file" name="immagineAuto" id="immagineAuto" tabindex="18" />
 
-                        <label for="descrizione">Descrizione dell&apos;immagine &ast;</label>
+                        <label for="descrizione">Breve descrizione &ast;</label>
                         <input type="text" name="descrizione" id="descrizione" tabindex="19" />
 
                         <input type="submit" id="salvaNuovoVeicoloVendita" value="SALVA VEICOLO" tabindex="20" />
