--- a/HTML/modificaInfoAmministratore.html
+++ b/HTML/modificaInfoAmministratore.html
@@ -26,7 +26,7 @@
             <div class="testoAmministratore">
                 <messaggio></messaggio>
                 <p class="pAmm">Inserire qui le informazioni personali da modificare</p>
-                <p class="pAmm">Attenzione&colon; l&apos;indirizzo <span xml:lang="en" lang="en">email</span> con cui ci si &egrave; registrati non pu&ograve; essere modificato</p>
+                <p class="pAmm">Attenzione&colon; l&apos;indirizzo <span xml:lang="en" lang="en">email</span> con cui ci si &egrave; registrati non pu&ograve; essere modificato e la data di nascita deve essere nel formato gg-mm-aaaa</p>
                 <form id="modificaInfo" onsubmit="return checkForm('modificaInfo');" class="formAmm" action="../PHP/salvaInformazioniModificate.php" method="post" enctype="multipart/form-data">
                     <fieldset>
                         <legend>Informazioni Personali</legend>
@@ -44,7 +44,7 @@
                         <label for="indirizzo">Indirizzo</label>
                         <input type="text" name="indirizzo" id="indirizzo" tabindex="16" />
 
-                        <label for="nascita">Data di nascita &lpar;gg-mm-aaaa&rpar;</label>
+                        <label for="nascita">Data di nascita<br />&lpar;gg-mm-aaaa&rpar;</label>
                         <input type="text" name="nascita" id="nascita" tabindex="17" />
 
                         <input type="submit" id="salvaModificheInfo" value="SALVA MODIFICHE" tabindex="18" />
