--- a/HTML/nuovoVeicoloNoleggio.html
+++ b/HTML/nuovoVeicoloNoleggio.html
@@ -52,7 +52,7 @@
                         <label for="immagineAuto">Immagine &ast;</label>
                         <input type="file" name="immagineAuto" id="immagineAuto" tabindex="19" />
 
-                        <label for="descrizione">Descrizione dell&apos;immagine &ast;</label>
+                        <label for="descrizione">Breve descrizione &ast;</label>
                         <input type="text" name="descrizione" id="descrizione" tabindex="20" />
 
                         <input type="submit" id="salvaNuovoVeicoloNoleggio" value="SALVA VEICOLO" tabindex="21" />
