--- a/HTML/areaPrivata.html
+++ b/HTML/areaPrivata.html
@@ -14,6 +14,7 @@
 		<link rel="icon" type="images/svg" href="" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
     <link rel="stylesheet" type="text/css" href="../CSS/cssUtente.css" />
+		<link rel="stylesheet" type="text/css" href="../CSS/cssPrint.css" media="print" />
     <script type="text/javascript" src="../JS/generale.js"></script>
 	</head>
 
