--- a/HTML/home.html
+++ b/HTML/home.html
@@ -26,29 +26,31 @@
         <menu></menu>
 		<breadcrumb></breadcrumb>
 		
-		<div class="containerText">
-			<img id="immagineConcessionaria" src="../Images/Concessionaria.jpg"  alt="Concessionaria"/>
-			<p class="titolo">CHI SIAMO</p>
-			
-			<p class="text"> La nostra &egrave; una concessionaria relativamente nuova che mira ad essere un punto di riferimento per tutti gli amanti delle quattro ruote del Padovano
-							e diventare un modello di qualit&agrave; &egrave; professionalit&agrave; sul territorio. </p>
-			
-			<p class="titolo">Il CLIENTE PRIMA DI TUTTO</p>
+		<div id="content">
+			<div class="containerText">
+				<img id="immagineConcessionaria" src="../Images/Concessionaria.jpg"  alt="Concessionaria"/>
+				<p class="titolo">CHI SIAMO</p>
+				
+				<p class="text"> La nostra &egrave; una concessionaria relativamente nuova che mira ad essere un punto di riferimento per tutti gli amanti delle quattro ruote del Padovano
+								e diventare un modello di qualit&agrave; &egrave; professionalit&agrave; sul territorio. </p>
+				
+				<p class="titolo">Il CLIENTE PRIMA DI TUTTO</p>
 
-			<p class="text"> Il cliente &egrave; per noi il bene pi&ugrave; prezioso ed al centro della nostra strategia, la nostra politica aziendale &egrave; infatti disegnata intorno al cliente ed alle sue esigenze. 
-							Gia oggi la nostra concessionaria si rivolge ad una clientela estesa come una realt&agrave; in grado di offrire un’offerta ampia e diversificata di prodotti e servizi, 
-							il nostro obiettivo &egrave; quello di sedurre e conquistare il cliente offrendo l’auto dei suoi sogni nuova o usata con il miglior rapporto qualit&agrave;/prezzo disponibile sul mercato.
+				<p class="text"> Il cliente &egrave; per noi il bene pi&ugrave; prezioso ed al centro della nostra strategia, la nostra politica aziendale &egrave; infatti disegnata intorno al cliente ed alle sue esigenze. 
+								Gia oggi la nostra concessionaria si rivolge ad una clientela estesa come una realt&agrave; in grado di offrire un’offerta ampia e diversificata di prodotti e servizi, 
+								il nostro obiettivo &egrave; quello di sedurre e conquistare il cliente offrendo l’auto dei suoi sogni nuova o usata con il miglior rapporto qualit&agrave;/prezzo disponibile sul mercato.
+				</p>
+			</div>
+			
+			<div id="containerOccasione">
+				<occasione></occasione>
+			</div>
+
+			<p>
+				<button onclick="topFunction()" class="hide" id="scrollUp">&#x2b06;</button>
 			</p>
+			
 		</div>
-		
-		<div id="containerOccasione">
-			<occasione></occasione>
-		</div>
-
-		<p>
-			<button onclick="topFunction()" class="hide" id="scrollUp">&#x2b06;</button>
-		</p>
-
 		<footer></footer>
 		
 	</body>
