--- a/HTML/contatti.html
+++ b/HTML/contatti.html
@@ -25,62 +25,65 @@
         <menu></menu>
         <breadcrumb></breadcrumb>
 
-        <div class="containerInfo">
-            <div id="mappa">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2801.041923095581!2d11.884345815518582!3d45.40849417910036!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477eda586ea23ad3%3A0xf4caaf73601b8ca!2sVia%20Paolotti%2C%2035121%20Padova%20PD!5e0!3m2!1sit!2sit!4v1585019531129!5m2!1sit!2sit" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <div="content">
+            <div class="containerInfo">
+                <div id="mappa">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2801.041923095581!2d11.884345815518582!3d45.40849417910036!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477eda586ea23ad3%3A0xf4caaf73601b8ca!2sVia%20Paolotti%2C%2035121%20Padova%20PD!5e0!3m2!1sit!2sit!4v1585019531129!5m2!1sit!2sit" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                </div>
+
+
+                <div id="indirizzo">
+                    <div class="titolo"> INDIRIZZI </div>
+                    <ul>
+                        <li>Concessionaria Greg (PD)</li>
+                        <li>Via G.B. Belzoni, 7 - 35121 Padova (Italy) (PD)</li>
+                    </ul>
+                </div>
+
+
+                <div id="contatti">
+                    <div class="titolo"> CONTATTI </div>
+                    <ul>
+                        <li class="nowrap">Email: ConcessionariaGreg@gmail.com</li>
+                        <li>Numero di telefono:  0437 83756</li>
+                        <li>Numero di fax: 0437 95565</li>
+                    </ul>
+                </div>
+
+                <div id="testo">Puoi contattarci anche utilizzando il form sottostante, un messaggio di risposta verra inviato alla tua area privata il prima possibile.</div>
+
             </div>
 
+                <messaggio></messaggio>
+                <form id="formMessaggio" onsubmit="return checkForm('formMessaggio');" action="../PHP/invioMessaggio.php"  method="post">
+                    <fieldset>
+                        <legend>Contattaci tramite questo modulo!</legend>
+                        <p id="formText">I campi marcati con * sono obbligatori</p>
 
-            <div id="indirizzo">
-                <div class="titolo"> INDIRIZZI </div>
-                <ul>
-                    <li>Concessionaria Greg (PD)</li>
-                    <li>Via G.B. Belzoni, 7 - 35121 Padova (Italy) (PD)</li>
-                </ul>
+                        <label for="nome">* Nome</label>
+                        <input type="text" name="nome" class="textbox" id="nome" tabindex="1" />
+
+                        <label for="cognome">* Cognome</label>
+                        <input type="text" name="cognome" class="textbox" id="cognome" tabindex="2" />
+
+                        <label for="email">* Email</label>
+                        <input type="text" name="email" class="textbox" id="email" tabindex="3" />
+
+                        <label for="numeroTelefono">Numero telefono</label>
+                        <input type="text" name="numeroTelefono" class="textbox" id="numeroTelefono" tabindex="4" />
+
+                        <label for="messaggio">* Messaggio</label>
+                        <textarea name="messaggio" class="textbox" id="messaggio" tabindex="5" cols="50" rows="5" ></textarea>
+
+                        <input type="submit" id="inviaMessaggio" value="INVIA" />
+
+                    </fieldset>
+                </form>
+                <p>
+                    <button onclick="topFunction()" class="hide" id="scrollUp">&#x2b06;</button>
+                </p>
+
             </div>
-
-
-            <div id="contatti">
-                <div class="titolo"> CONTATTI </div>
-                <ul>
-                    <li class="nowrap">Email: ConcessionariaGreg@gmail.com</li>
-                    <li>Numero di telefono:  0437 83756</li>
-                    <li>Numero di fax: 0437 95565</li>
-                </ul>
-            </div>
-
-            <div id="testo">Puoi contattarci anche utilizzando il form sottostante, un messaggio di risposta verra inviato alla tua area privata il prima possibile.</div>
-
-        </div>
-
-            <messaggio></messaggio>
-            <form id="formMessaggio" onsubmit="return checkForm('formMessaggio');" action="../PHP/invioMessaggio.php"  method="post">
-                <fieldset>
-                    <legend>Contattaci tramite questo modulo!</legend>
-                    <p id="formText">I campi marcati con * sono obbligatori</p>
-
-                    <label for="nome">* Nome</label>
-                    <input type="text" name="nome" class="textbox" id="nome" tabindex="1" />
-
-                    <label for="cognome">* Cognome</label>
-                    <input type="text" name="cognome" class="textbox" id="cognome" tabindex="2" />
-
-                    <label for="email">* Email</label>
-                    <input type="text" name="email" class="textbox" id="email" tabindex="3" />
-
-                    <label for="numeroTelefono">Numero telefono</label>
-                    <input type="text" name="numeroTelefono" class="textbox" id="numeroTelefono" tabindex="4" />
-
-                    <label for="messaggio">* Messaggio</label>
-                    <textarea name="messaggio" class="textbox" id="messaggio" tabindex="5" cols="50" rows="5" ></textarea>
-
-                    <input type="submit" id="inviaMessaggio" value="INVIA" />
-
-                </fieldset>
-            </form>
-            <p>
-                <button onclick="topFunction()" class="hide" id="scrollUp">&#x2b06;</button>
-            </p>
             <footer></footer>
 
 
