aggiunti meta tag

--- a/HTML/listaNoleggiAmministratore.html
+++ b/HTML/listaNoleggiAmministratore.html
@@ -2,14 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="it" lang="it">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta http-equiv="Content-Script-Type" content="text/javascript" />
 		<meta name="title" content="riepilogo veicoli prenotati per noleggio" />
 		<meta name="description" content="riepilogo di tutti veicoli prenotati per il noleggio" />
 		<meta name="keywords" content="noleggio, veicoli noleggiati, riepilogo, area personale, area amministratore" />
 		<meta name="language" content="italian it" />
         <meta name="author" content="Giulia Fiorese" />
-        
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Prenotazioni Veicoli A Noleggio Amministratore</title>
-
         <link rel="icon" type="images/svg" href="../Images/LogoGREG.png" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssAmministratore.css" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
