--- a/HTML/messaggiAmministratore.html
+++ b/HTML/messaggiAmministratore.html
@@ -2,14 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="it" lang="it">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta http-equiv="Content-Script-Type" content="text/javascript" />
 		<meta name="title" content="messaggi area personale amministratore" />
 		<meta name="description" content="pagina per la gestione dei messaggi" />
 		<meta name="keywords" content="messaggi, area personale, area amministratore" />
 		<meta name="language" content="italian it" />
         <meta name="author" content="Giulia Fiorese" />
-        
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Messaggi Amministratore</title>
-        
         <link rel="icon" type="images/svg" href="../Images/LogoGREG.png" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssAmministratore.css" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
