--- a/HTML/modificaVeicoloNoleggio.html
+++ b/HTML/modificaVeicoloNoleggio.html
@@ -2,18 +2,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="it" lang="it">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta http-equiv="Content-Script-Type" content="text/javascript" />
 		<meta name="title" content="modifica veicolo a noleggio" />
 		<meta name="description" content="pagina per modifica veicolo a noleggio" />
 		<meta name="keywords" content="modifica veicolo, veicolo noleggio, area personale, area amministratore" />
 		<meta name="language" content="italian it" />
         <meta name="author" content="Giulia Fiorese" />
-
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Modifica Veicolo A Noleggio</title>
-
         <link rel="icon" type="images/svg" href="../Images/LogoGREG.png" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssAmministratore.css" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
-
         <script type="text/javascript" src="../JS/controlliClient.js"></script>
     </head>
 
