aggiunti meta tag

--- a/HTML/contatti.html
+++ b/HTML/contatti.html
@@ -3,19 +3,18 @@
 
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta http-equiv="Content-Script-Type" content="text/javascript" />
         <title>Informazioni</title>
         <meta name="title" content="Info" />
         <meta name="description" content="Indicazioni stradali e contatti" />
         <meta name="keywords" content="Concessionaria, auto, Padova, info, contatti" />
 		<meta name="language" content="italian it" />
         <meta name="author" content="Erik Tabacchi" />
-
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-
         <link rel="icon" type="images/svg" href="../Images/LogoGREG.png" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssContatti.css" />
-        <script src="../JS/generale.js" type="text/javascript"></script>
+        <script type="text/javascript" src="../JS/generale.js"></script>
         <script type="text/javascript" src="../JS/controlliClient.js"></script>
 
 	</head>
