--- a/HTML/home.html
+++ b/HTML/home.html
@@ -3,22 +3,19 @@
 
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta http-equiv="Content-Script-Type" content="text/javascript" />
 		<title>Home</title>
 		<meta name="title" content="Sito concessionaria" />
 		<meta name="description" content="homepage della concessionaria" />
 		<meta name="keywords" content="concessionaria, auto, Padova" />
 		<meta name="language" content="italian it" />
-
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-
 		<meta name="author" content="Erik Tabacchi" />
 		<link rel="icon" type="images/svg" href="../Images/LogoGREG.png" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssHome.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssVeicoli.css" />
-
 		<script src="../JS/generale.js" type="text/javascript"></script> 
-
 	</head>
 	
 	<body>
