--- a/HTML/registrati.html
+++ b/HTML/registrati.html
@@ -3,17 +3,18 @@
 
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta http-equiv="Content-Script-Type" content="text/javascript" />
 		<title>Registrati</title>
 		<meta name="title" content="Registrati" />
-  	<meta name="description" content="Pagina di Registrazione" />
+  		<meta name="description" content="Pagina di Registrazione" />
 		<meta name="keywords" content="auto, preventivi, noleggi, dati, registrazione, account" />
 		<meta name="language" content="italian it" />
 		<meta name="author" content="Riccardo Conte" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="icon" type="images/svg" href="" />
+		<link rel="icon" type="images/svg" href="../Images/LogoGREG.png" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssUtente.css" />
-  	<script type="text/javascript" src="../JS/controlliClient.js"></script>
+  		<script type="text/javascript" src="../JS/controlliClient.js"></script>
 		<script type="text/javascript" src="../JS/generale.js"></script>
 	</head>
 
