aggiunto id="mainContent"

--- a/HTML/homeAmministratore.html
+++ b/HTML/homeAmministratore.html
@@ -19,7 +19,7 @@
         <header></header>
         <menu></menu>
         <breadcrumb></breadcrumb>
-        <div class="corpoAmministratore">
+        <div id="mainContent" class="corpoAmministratore">
             <menuAmministratore></menuAmministratore>
             <div class="testoAmministratore">
                 <h1 class="h1Amm">Benvenuto<nome></nome></h1>
