--- a/HTML/nuovoVeicoloNoleggio.html
+++ b/HTML/nuovoVeicoloNoleggio.html
@@ -20,7 +20,7 @@
         <header></header>
         <menu></menu>
         <breadcrumb></breadcrumb>
-        <div class="corpoAmministratore">
+        <div id="mainContent" class="corpoAmministratore">
             <menuAmministratore></menuAmministratore>
             <div class="testoAmministratore">
                 <messaggio></messaggio>
