--- a/HTML/veicoliNoleggioAmministratore.html
+++ b/HTML/veicoliNoleggioAmministratore.html
@@ -19,7 +19,7 @@
         <header></header>
         <menu></menu>
         <breadcrumb></breadcrumb>
-        <div class="corpoAmministratore">
+        <div id="mainContent" class="corpoAmministratore">
             <menuAmministratore></menuAmministratore>
             <div class="testoAmministratore">
                 <messaggio></messaggio>
