--- a/HTML/modificaInfoAmministratore.html
+++ b/HTML/modificaInfoAmministratore.html
@@ -14,6 +14,7 @@
 		<link rel="stylesheet" type="text/css" href="../CSS/cssAmministratore.css" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
         <script type="text/javascript" src="../JS/controlliClient.js"></script>
+        <script type="text/javascript" src="../JS/generale.js"></script>
     </head>
 
     <body>
@@ -43,7 +44,7 @@
                         <label for="indirizzo">Indirizzo</label>
                         <input type="text" name="indirizzo" id="indirizzo" tabindex="16" />
 
-                        <label for="nascita">Data di nascita<br />&lpar;gg-mm-aaaa&rpar;</label>
+                        <label for="nascita">Data di nascita &lpar;gg-mm-aaaa&rpar;</label>
                         <input type="text" name="nascita" id="nascita" tabindex="17" />
 
                         <input type="submit" id="salvaModificheInfo" value="SALVA MODIFICHE" tabindex="18" />
