--- a/HTML/nuovoVeicoloVendita.html
+++ b/HTML/nuovoVeicoloVendita.html
@@ -14,6 +14,7 @@
 		<link rel="stylesheet" type="text/css" href="../CSS/cssAmministratore.css" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
         <script type="text/javascript" src="../JS/controlliClient.js"></script>
+        <script type="text/javascript" src="../JS/generale.js"></script>
     </head>
 
     <body>
