css stampa e altri fix

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -23,7 +23,7 @@
         <menu></menu>
 		<breadcrumb></breadcrumb>
 		
-		<div id="content">
+		<div id="mainContent">
 			<div class="containerText">
 				<img id="immagineConcessionaria" src="../Images/Concessionaria.jpg"  alt="Concessionaria"/>
 				<p class="titolo">CHI SIAMO</p>
