--- a/HTML/noleggioAcquista.html
+++ b/HTML/noleggioAcquista.html
@@ -18,6 +18,9 @@
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssVeicoli.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssAmministratore.css" />
+		<link rel="stylesheet" type="text/css" href="../CSS/cssPrint.css" media="print" />
+		<link rel="stylesheet" type="text/css" href="../CSS/cssPrintVeicoli.css" media="print" />
+
 		<script src="../JS/generale.js" type="text/javascript"></script> 
 	</head>
 
@@ -26,17 +29,18 @@
 
 		<menu></menu>
 		<breadcrumb></breadcrumb>
+		<div id="mainContent">
+			<div id="filtri">
+				<filtriAuto></filtriAuto>
+			</div>
+			<div class="main">
+				<auto></auto>
+			</div>
 
-		<filtriAuto></filtriAuto>
-
-		<div class="main">
-			<auto></auto>
+			<p>
+				<button onclick="topFunction()" class="hide" id="scrollUp">&#x2b06;</button>
+			</p>
 		</div>
-
-		<p>
-			<button onclick="topFunction()" class="hide" id="scrollUp">&#x2b06;</button>
-		</p>
-
 		<footer></footer>
 	</body>
 </html>
