--- a/HTML/noleggioVeicolo.html
+++ b/HTML/noleggioVeicolo.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="it" lang="it">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML + ARIA 1.0//EN" "http://www.w3.org/WAI/ARIA/schemata/xhtml-aria-1.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="it">
 
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -18,6 +18,10 @@
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssVeicoli.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssAmministratore.css" />
+
+		<link rel="stylesheet" type="text/css" href="../CSS/cssPrint.css" media="print" />
+		<link rel="stylesheet" type="text/css" href="../CSS/cssPrintVeicoli.css" media="print" />
+		
 		<script src="../JS/veicoli.js" type="text/javascript"></script> 
 		<script src="../JS/generale.js" type="text/javascript"></script> 
 	</head>
@@ -28,7 +32,7 @@
 			<menu></menu>
             <breadcrumb></breadcrumb>
                 
-            <div class="flexbox-item fill-area content flexbox-item-grow">
+            <div id="mainContent" class="flexbox-item fill-area content flexbox-item-grow">
                 <div class="fill-area-content flexbox-item-grow">
                     <form action="../PHP/noleggiaVeicoloFn.php?targaAuto=_TARGA_" onsubmit="return checkDateNolo();" method="post">
 						<fieldset>
@@ -37,7 +41,7 @@
 							<input type="text" name="dataInizioNolo" onchange="dataInizioChange(event);" class="dataInput"  tabindex="7" />
 							<label for="dataFineNolo">Al</label>
 							<input name="dataFineNolo" type="text" onchange="dataFineChange(event);" class="dataInput" tabindex="8" />
-							<input type="submit" name="targa" title="'_TARGA_'" value="Prenota" tabindex="9" />
+							<input type="submit" name="targa" title="'_TARGA_'" value="Prenota" tabindex="9" class="hidePrint" />
 						</fieldset>
 					</form>
 
@@ -48,8 +52,8 @@
 						<div class="datiVeicolo">
 							<h2>_MARCAMODELLO_</h2>
 							<ul>
-								<li><p><strong>Cilindrata:</strong>  _CILINDRATA_</p></li>
-								<li><p><strong>Costo noleggio (al giorno):</strong> <span id="costoNolo">_COSTONOLEGGIO_ &#8364;</span></p></li>
+								<li><p><strong>Cilindrata:</strong>  _CILINDRATA_ cm&sup3;</p></li>
+								<li><p><strong>Costo noleggio (al giorno):</strong> <span id="costoNolo"> _COSTONOLEGGIO_ &#8364;</span></p></li>
 								<li><p><strong>Cauzione:</strong> _CAUZIONE_ &#8364;</p></li>
 							</ul>
 						</div>
@@ -59,7 +63,7 @@
 			</div>
 			
 			<p>
-                <button onclick="topFunction()" class="hide" id="scrollUp">&#x2b06;</button>
+                <button onclick="topFunction()" class="hide hidePrint" id="scrollUp">&#x2b06;</button>
             </p>
             
             <footer></footer>
