--- a/HTML/home.html
+++ b/HTML/home.html
@@ -47,7 +47,7 @@
 			</div>
 
 			<p>
-				<button onclick="topFunction()" class="hide" id="scrollUp">&#x2b06;</button>
+				<button onclick="topFunction()" class="hide" id="scrollUp">&#9650;</button>
 			</p>
 			
 		</div>
