--- a/HTML/contatti.html
+++ b/HTML/contatti.html
@@ -80,7 +80,7 @@
                     </fieldset>
                 </form>
                 <p>
-                    <button onclick="topFunction()" class="hide" id="scrollUp">&#x2b06;</button>
+                    <button onclick="topFunction()" class="hide" id="scrollUp">&#9650;</button>
                 </p>
 
             </div>
