--- a/HTML/areaPrivata.html
+++ b/HTML/areaPrivata.html
@@ -23,7 +23,7 @@
 		<menu></menu>
 		<breadcrumb></breadcrumb>
 
-		<div class="main">
+		<div class="mainContent">
 			<h1 class='titolo'>AREA PERSONALE</h1>
 			<sideNav></sideNav>
 			<contentItems></contentItems>
