--- a/HTML/login.html
+++ b/HTML/login.html
@@ -23,7 +23,7 @@
 		<menu></menu>
 		<breadcrumb></breadcrumb>
 
-    <div class="main">
+    <div class="mainContent">
       <div class="formBox" >
           <h1 class="titolo">Accedi al tuo account</h1>
           <form id="loginForm" onsubmit="return checkForm('loginForm');" action="../PHP/accessoLogin.php" method="post">
