--- a/HTML/registrati.html
+++ b/HTML/registrati.html
@@ -23,7 +23,7 @@
 		<menu></menu>
 		<breadcrumb></breadcrumb>
 
-		<div class="main">
+		<div class="mainContent">
 			<div id="registrationBox" class="outerBox">
 				<messaggio></messaggio>
 				<h1>Crea il tuo account!</h1>
