css amministratore completo (desktop, mobile, stampa)

--- a/HTML/homeAmministratore.html
+++ b/HTML/homeAmministratore.html
@@ -11,8 +11,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <title>Home Area Amministratore</title>
         <link rel="icon" type="images/svg" href="../Images/LogoGREG.png"/>
-        <link rel="stylesheet" type="text/css" href="../CSS/cssAmministratore.css"/>
         <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css"/>
+		<link rel="stylesheet" type="text/css" href="../CSS/cssAmministratore.css"/>
+        <link rel="stylesheet" type="text/css" media="handheld, screen and (max-width:1000px), only screen and (max-device-width:1000px)" href="../CSS/cssAmmMobile.css"/>
+        <link rel="stylesheet" type="text/css" media="print" href="../CSS/cssAmmPrint.css"/>
         <script type="text/javascript" src="../JS/generale.js"></script>
     </head>
 
