--- a/HTML/infoAmministratore.html
+++ b/HTML/infoAmministratore.html
@@ -9,7 +9,7 @@
 		<meta name="language" content="italian it" />
         <meta name="author" content="Giulia Fiorese" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Informazioni Personali Amministratore</title>
+        <title>Informazioni Personali &#124; Area Amministratore</title>
         <link rel="icon" type="images/svg" href="../Images/LogoGREG.png" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css"/>
 		<link rel="stylesheet" type="text/css" href="../CSS/cssAmministratore.css"/>
@@ -27,7 +27,7 @@
             <div class="testoAmministratore">
                 <messaggio></messaggio>
                 <h1 class="h1Amm">Riepilogo delle informazioni personali</h1>
-                <p class="pLinkAmm"><a class="linkMod" href="../PAGES/modificaInfoAmministratore.php" tabindex="13">MODIFICA INFORMAZIONI</a></p>
+                <p class="pLinkAmm"><a class="linkMod" href="../PAGES/modificaInfoAmministratore.php" tabindex="13">Modifica informazioni personali</a></p>
                 <infoPersonali></infoPersonali>
             </div>
         </div>
