--- a/HTML/messaggiAmministratore.html
+++ b/HTML/messaggiAmministratore.html
@@ -9,7 +9,7 @@
 		<meta name="language" content="italian it" />
         <meta name="author" content="Giulia Fiorese" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Messaggi Amministratore</title>
+        <title>Messaggi &#124; Area Amministratore</title>
         <link rel="icon" type="images/svg" href="../Images/LogoGREG.png" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css"/>
 		<link rel="stylesheet" type="text/css" href="../CSS/cssAmministratore.css"/>
@@ -29,6 +29,7 @@
                 <h1 class="h1Amm">Lista dei messaggi ricevuti e delle risposte inviate</h1>
                 <messaggiAmministratore></messaggiAmministratore>
             </div>
+            <p><button onclick="topFunction()" class="hide" id="scrollUp">&#9650;</button></p>
         </div>
         <footer></footer>
     </body>
