--- a/HTML/modificaInfoAmministratore.html
+++ b/HTML/modificaInfoAmministratore.html
@@ -9,7 +9,7 @@
 		<meta name="language" content="italian it" />
         <meta name="author" content="Giulia Fiorese" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Modifica Informazioni Personali Amministratore</title>
+        <title>Modifica Informazioni Personali &#124; Area Amministratore</title>
         <link rel="icon" type="images/svg" href="../Images/LogoGREG.png" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css"/>
 		<link rel="stylesheet" type="text/css" href="../CSS/cssAmministratore.css"/>
@@ -27,12 +27,12 @@
             <menuAmministratore></menuAmministratore>
             <div class="testoAmministratore">
                 <messaggio></messaggio>
-                <p class="pAmm">Inserire qui le informazioni personali da modificare</p>
-                <p class="pAmm">Attenzione&colon; l&apos;indirizzo <span xml:lang="en" lang="en">email</span> con cui ci si &egrave; registrati non pu&ograve; essere modificato e la data di nascita deve essere nel formato gg-mm-aaaa</p>
+                <p class="pAmm">Inserire qui le informazioni personali da modificare&#46;</p>
+                <p class="pAmm">Attenzione&#58; l&#39;indirizzo <span xml:lang="en" lang="en">email</span> con cui ci si &egrave; registrati non pu&ograve; essere modificato e la data di nascita deve essere nel formato gg&#8722;mm&#8722;aaaa</p>
                 <form id="modificaInfo" onsubmit="return checkForm('modificaInfo');" class="formAmm" action="../PHP/salvaInformazioniModificate.php" method="post" enctype="multipart/form-data">
                     <fieldset>
                         <legend>Informazioni Personali</legend>
-                        <p class="pFormAmm">Ogni campo deve essere compilato&colon; nel caso in cui il campo venga lasciato vuoto, le informazioni precedentemente inserite verranno eliminate</p>
+                        <p class="pFormAmm">Ogni campo deve essere compilato&#58; nel caso in cui il campo venga lasciato vuoto&#44; le informazioni precedentemente inserite verranno eliminate&#46;</p>
 
                         <label for="nome">Nome</label>
                         <input type="text" name="nome" id="nome" tabindex="13" />
@@ -46,13 +46,14 @@
                         <label for="indirizzo">Indirizzo</label>
                         <input type="text" name="indirizzo" id="indirizzo" tabindex="16" />
 
-                        <label for="nascita">Data di nascita &lpar;gg-mm-aaaa&rpar;</label>
+                        <label for="nascita">Data di nascita &#40;gg&#8722;mm&#8722;aaaa&#41;</label>
                         <input type="text" name="nascita" id="nascita" tabindex="17" />
 
-                        <input type="submit" id="salvaModificheInfo" value="SALVA MODIFICHE" tabindex="18" />
+                        <input type="submit" id="salvaModificheInfo" value="Salva modifiche" tabindex="18" />
                     </fieldset>
                 </form>
             </div>
+            <p><button onclick="topFunction()" class="hide" id="scrollUp">&#9650;</button></p>
         </div>
         <footer></footer>
     </body>
