--- a/HTML/veicoliNoleggioAmministratore.html
+++ b/HTML/veicoliNoleggioAmministratore.html
@@ -9,7 +9,7 @@
 		<meta name="language" content="italian it" />
 		<meta name="author" content="Giulia Fiorese" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Veicoli A Noleggio Amministratore</title>
+        <title>Veicoli A Noleggio &#124; Area Amministratore</title>
         <link rel="icon" type="images/svg" href="../Images/LogoGREG.png" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css"/>
 		<link rel="stylesheet" type="text/css" href="../CSS/cssAmministratore.css"/>
@@ -27,9 +27,10 @@
             <div class="testoAmministratore">
                 <messaggio></messaggio>
                 <h1 class="h1Amm">Lista dei veicoli a noleggio</h1>
-                <p class="pLinkAmm"><a class="linkMod" href="nuovoVeicoloNoleggio.php" tabindex="13">AGGIUNGI VEICOLO A NOLEGGIO</a></p>
+                <p class="pLinkAmm"><a class="linkMod" href="nuovoVeicoloNoleggio.php" tabindex="13">Aggiungi veicolo a noleggio</a></p>
                 <veicoliNoleggio></veicoliNoleggio>
             </div>
+            <p><button onclick="topFunction()" class="hide" id="scrollUp">&#9650;</button></p>
         </div>
         <footer></footer>
     </body>
