--- a/HTML/noleggioVeicolo.html
+++ b/HTML/noleggioVeicolo.html
@@ -63,7 +63,7 @@
 			</div>
 			
 			<p>
-                <button onclick="topFunction()" class="hide hidePrint" id="scrollUp">&#9650;</button>
+                <button aria-label="Torna in cima" onclick="topFunction()" class="hide" id="scrollUp">&#9650;</button>
             </p>
             
             <footer></footer>
