--- a/HTML/messaggiAmministratore.html
+++ b/HTML/messaggiAmministratore.html
@@ -29,7 +29,7 @@
                 <h1 class="h1Amm">Lista dei messaggi ricevuti e delle risposte inviate</h1>
                 <messaggiAmministratore></messaggiAmministratore>
             </div>
-            <p><button onclick="topFunction()" class="hide" id="scrollUp">&#9650;</button></p>
+            <button aria-label="Torna in cima" onclick="topFunction()" class="hide" id="scrollUp">&#9650;</button>
         </div>
         <footer></footer>
     </body>
