--- a/HTML/modificaVeicoloVendita.html
+++ b/HTML/modificaVeicoloVendita.html
@@ -52,7 +52,7 @@
                     </fieldset>
                 </form>
             </div>
-            <p><button onclick="topFunction()" class="hide" id="scrollUp">&#9650;</button></p>
+            <button aria-label="Torna in cima" onclick="topFunction()" class="hide" id="scrollUp">&#9650;</button>
         </div>
         <footer></footer>
     </body>
