--- a/HTML/registrati.html
+++ b/HTML/registrati.html
@@ -61,7 +61,7 @@
 			</div>
 		</div>
 		<p>
-				<button onclick="topFunction()" class="hide" id="scrollUp">&#x2b06;</button>
+			<button aria-label="Torna in cima" onclick="topFunction()" class="hide" id="scrollUp">&#9650;</button>
 		</p>
     <footer></footer>
   </body>
