--- a/HTML/veicoliVenditaAmministratore.html
+++ b/HTML/veicoliVenditaAmministratore.html
@@ -30,7 +30,7 @@
                 <p class="pLinkAmm"><a class="linkMod" href="nuovoVeicoloVendita.php" tabindex="13">Aggiungi veicolo in vendita</a></p>
                 <veicoliVendita></veicoliVendita>
             </div>
-            <p><button onclick="topFunction()" class="hide" id="scrollUp">&#9650;</button></p>
+            <button aria-label="Torna in cima" onclick="topFunction()" class="hide" id="scrollUp">&#9650;</button>
         </div>
         <footer></footer>
     </body>
